# Paracooba

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile.in  Jenkinsfile  LICENSE.md  Paracooba.distracdef  README.md  aws-run-march.sh  aws-run.sh
distracvis/: CMakeLists.txt  distracvis_main.cpp  mainwindow.cpp  mainwindow.hpp  treevis_widget.cpp  treevis_widget.hpp
distracvis/modules/: FindCorrade.cmake  FindMagnum.cmake
executable/: CLI.cpp  CLI.hpp  CMakeLists.txt  ModuleLoader.cpp  ModuleLoader.hpp  main.cpp
libparacooba/: CMakeLists.txt
libparacooba/capnp-schemas/: message.capnp
libparacooba/include/paracooba/: assignment_serializer.hpp  cadical_mgr.hpp  cadical_task.hpp  client.hpp  cluster-node-store.hpp  cluster-node.hpp  cluster-statistics.hpp  cnf.hpp  cnftree.hpp  communicator.hpp  config.hpp  daemon.hpp  decision_task.hpp  ema.hpp  log.hpp  networked_node.hpp  priority_queue_lock_semantics.hpp  readywaiter.hpp  runner.hpp  task.hpp  task_factory.hpp  taskresult.hpp  tracer.hpp  tracer_conversions.hpp  types.hpp  util.hpp
libparacooba/src/: CMakeLists.txt  cadical_mgr.cpp  cadical_task.cpp  client.cpp  cluster-node-store.cpp  cluster-node.cpp  cluster-statistics.cpp  cnf.cpp  cnftree.cpp  communicator.cpp  config.cpp  daemon.cpp  decision_task.cpp  ema.cpp  log.cpp  networked_node.cpp  runner.cpp  task.cpp  task_factory.cpp  taskresult.cpp  tracer.cpp  util.cpp
libparacooba/src/cuber/: cuber.cpp  literal_frequency.cpp  pregenerated.cpp  registry.cpp
libparacooba/src/messages/: CMakeLists.txt  job_impl.cpp  jobdescription_transmitter.cpp  message_receiver.cpp  node.cpp
libparacooba/src/net/: CMakeLists.txt  connection.cpp  control.cpp  tcp_acceptor.cpp  udp_server.cpp
libparacooba/src/webserver/: api.cpp  initiator.cpp  webserver.cpp
loader/: CMakeLists.txt  ModuleLoader.cpp  StaticModuleLoader.cpp
modules/: CMakeLists.txt  module.c
modules/broker/: CMakeLists.txt  broker.cpp  broker_compute_node.cpp  broker_compute_node.hpp  broker_compute_node_store.cpp  broker_compute_node_store.hpp  broker_task_store.cpp  broker_task_store.hpp  discover.c  test_broker_task_store.cpp
modules/commonc/: CMakeLists.txt  compute_node.c  compute_node_store_adapter.c  config.c  file.c  log.cpp  message.c  message_kind.c  messaging_queue.c  path.c  random.cpp  reverse_iterator.hpp  spin_lock.hpp  status.c  task.c  task_store_adapter.c  test_compute_node_store_adapter.cpp  test_config.cpp  test_linked_list.cpp  test_messaging_queue.cpp  test_path.cpp  test_task_store_adapter.cpp  test_thread_registry.cpp  thread_registry.c  types.c
modules/communicator/: CMakeLists.txt  communicator.cpp  communicator_util.cpp  communicator_util.hpp  discover.c  file_sender.cpp  file_sender.hpp  message_send_queue.cpp  message_send_queue.hpp  packet.cpp  packet.hpp  service.cpp  service.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_initiator.cpp  tcp_connection_initiator.hpp  test_message_send_queue.cpp  timeout_controller.cpp  timeout_controller.hpp  transmit_mode.hpp  udp_acceptor.cpp  udp_acceptor.hpp  udp_announcement.hpp
modules/runner/: CMakeLists.txt  discover.c  runner.cpp  runner_worker.cpp  runner_worker.hpp  runner_worker_executor.cpp  runner_worker_executor.hpp
modules/solver/: CMakeLists.txt  cadical_handle.cpp  cadical_handle.hpp  cadical_manager.cpp  cadical_manager.hpp  cadical_terminator.hpp  cube_source.cpp  cube_source.hpp  discover.c  generic_sat_handle.cpp  generic_sat_handle.hpp  kissat_task.cpp  kissat_task.hpp  noncopy_ostream.hpp  parser_task.cpp  parser_task.hpp  portfolio_sat_handle.cpp  portfolio_sat_handle.hpp  quapisolver_sat_handle.cpp  quapisolver_sat_handle.hpp  sat_handler.cpp  sat_handler.hpp  solver.cpp  solver_assignment.hpp  solver_config.cpp  solver_config.hpp  solver_task.cpp  solver_task.hpp  test_cube_source.cpp
modules/solver_qbf/: CMakeLists.txt  cowsolver_handle.cpp  cowsolver_handle.hpp  decision_source.cpp  decision_source.hpp  depqbf_handle.cpp  depqbf_handle.hpp  discover.c  generic_qbf_handle.cpp  generic_qbf_handle.hpp  parser_qbf.cpp  parser_qbf.hpp  portfolio_qbf_handle.cpp  portfolio_qbf_handle.hpp  qbf_cube_source.cpp  qbf_cube_source.hpp  qbf_parser_task.cpp  qbf_parser_task.hpp  qbf_solver_manager.cpp  qbf_solver_manager.hpp  qbf_solver_task.cpp  qbf_solver_task.hpp  qbf_types.hpp  quapisolver_handle.cpp  quapisolver_handle.hpp  solver_assignment.hpp  solver_qbf.cpp  solver_qbf_config.cpp  solver_qbf_config.hpp  test_qbf_parser.cpp
paracuber/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
paracuber/doc/dot/: cnftree-schematic.dot  solver-network-flow.dot
paracuber/doc/pages/: CNFTree.md  Rebalancing.md  mainpage.md  tcp_communication.md
paracuber/internalwebserver-docroot/: index.html
paracuber/internalwebserver-docroot/css/: styles.css
paracuber/internalwebserver-docroot/js/: main.js
paracuber/libparacuber/: CMakeLists.txt
paracuber/libparacuber/capnp-schemas/: CMakeLists.txt  message.capnp
paracuber/libparacuber/src/: CMakeLists.txt  cadical_task.cpp  cdcl_task.cpp  client.cpp  cluster-statistics.cpp  cnf.cpp  cnftree.cpp  communicator.cpp  config.cpp  daemon.cpp  decision_task.cpp  log.cpp  runner.cpp  task.cpp  task_factory.cpp  taskresult.cpp  (+1 more)
paracuber/scripts/: parac.sh
paracuber/src/: main.cpp
paracuber/test/: CMakeLists.txt  assignment_serializer_test.cpp  cnf-test.cpp  cnftree-test.cpp  cuber_test.cpp  path_factory_test.cpp
test/: CMakeLists.txt  asio-test.cpp  assignment_serializer_test.cpp  cnftree-test.cpp  connection_test.cpp  cuber_test.cpp  mocks.hpp  paracooba_test_main.cpp  path_factory_test.cpp  test_connect_daemon_and_client.cpp  test_connect_two_daemons.cpp  test_master_daemon_sat.cpp  test_qbf_exists_forall_unsat.cpp  test_task_store.cpp
tracealyzer/: CMakeLists.txt
tracealyzer/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  tracealyzer_main.cpp  tracefile.cpp  tracefile.hpp  tracefileview.cpp  tracefileview.hpp
(+215 files in other folders)
